--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "autoload": {
         "psr-4": {
-            "Julio\\Percentage\\": "src/"
+            "julio\\percentage\\": "src/"
         }
     },
     "require": {
@@ -10,5 +10,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^8"
+    },
+    "scripts": {
+        "unitTest": ""   
     }
 }
